FINALLY the battle has ended... final commit
