# src/models/Ad.js
@@ -1,26 +1,3 @@
-/*
-const mongoose = require("mongoose");
-
-const adSchema = new mongoose.Schema(
-  {
-    title: { type: String, required: true },
-    category: { type: String, required: true },
-    price: { type: Number, required: true },
-    description: { type: String, required: true },
-    media: [{ type: String }], // Max 5 urls
-    vendorId: { type: mongoose.Schema.Types.ObjectId, ref: "User", required: true },
-    vendorName: { type: String, required: true },
-    isActive: { type: Boolean, default: true },
-    dateCreated: { type: Date, default: Date.now },
-  },
-  { timestamps: true }
-);
-
-module.exports = mongoose.model("Ad", adSchema);
-*/
-
-
-
 const mongoose = require("mongoose");
 
 const adSchema = new mongoose.Schema(
